--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&family=Signika+Negative:wght@700&family=Sora:wght@700&display=swap");
+    </style>
+    <title>Dropdown</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
